Add admin client deletion
